--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,8 @@ jobs:
         gpg --list-secret-keys
       env:
         GPG_SIGNING_KEY: ${{ secrets.GPG_SIGNING_KEY }}
+    - name: Run tests
+      run: sbt test
     - name: Publish Signed
       run: |
         gpg --list-secret-keys
