--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,17 +5,11 @@ fail_fast: true
 repos:
   - repo: local
     hooks:
-      - id: scalafmt-test
-        name: Scalafmt Fixes
-        pass_filenames: false
-        language: system
-        entry: scalafmt
-        always_run: true
-      - id: scalac-lint
-        name: Scala lint
+      - id: scalafmt
+        name: Scala format
         language: system
         always_run: true
         pass_filenames: false
         verbose: true
         entry: sbt
-        args: [ '; clean ; set scalacOptions ++= Seq("-Xfatal-warnings", "-Wconf:any:warning-verbose") ; compile' ]
+        args: [ scalafmt ]
