--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,3 +13,11 @@ repos:
         verbose: true
         entry: sbt
         args: [ scalafmt ]
+      - id: scala-ct
+        name: Scala compile and test
+        language: system
+        always_run: true
+        pass_filenames: false
+        verbose: true
+        entry: sbt
+        args: [ test ]
